[package]
name = "luoshu-python-sdk"
authors = ["Hubert Shelley <hubertshelley@163.com>"]
categories = ["web-programming::micro-service", "web-programming::api-gateway", "cloud native"]
description = """
Luoshu
"""
documentation = "https://docs.rs/"
edition = "2021"
homepage = "https://github.com/hubertshelley/luoshu"
keywords = ["discovery", "configuration", "management", "micro-service"]
license = "Apache-2.0"
readme = "./README.md"
repository = "https://github.com/hubertshelley/luoshu"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "luoshu_python_sdk"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module", "generate-import-lib"] }
pyo3-asyncio = { version = "0.18.0", features = ["tokio-runtime"] }
tokio = { version = "1.28.2", features = ["full"] }
serde_json = "1.0.99"

luoshu = "0.1.0"
luoshu_registry = "0.1.0"
